[package]
name = "digitalocean-api"
version = "0.2.1"
authors = ["hoverbear <andrew@hoverbear.org>", "LoganDark <logandark@logandark.net>", "Daniel (dmilith) Dettlaff <dmilith@me.com>"]
repository = "https://github.com/VerKnowSys/digitalocean.git"
categories = ["development-tools", "api-bindings"]
homepage = "https://github.com/VerKnowSys/digitalocean.git"
documentation = "https://docs.rs/crate/digitalocean/"
description = "A pure Rust DigitalOcean API binding."
edition = "2024"

keywords = ["DigitalOcean", "IaaS", "API"]
license = "MIT"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[dependencies]
getset = "0.1.6"
thiserror = "2.0.12"
lazy_static = "1.5.0"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }

# [dependencies.chrono]
# features = ["serde"]
# version = "0.4.41"

# [dev-dependencies]
# dotenv = "0.15.0"
# env_logger = "0.11.8"

# [dev-dependencies.uuid]
# features = ["v4"]
# version = "1.17.0"
